test/errors/arc/destructor_free_double_release_fail.hy
// manual destructor followed by free should be diagnosed as a double release

class Payload
{
    Payload() {}
    ~Payload() {}
}

int main()
{
    Payload value = Payload()
    value.~Payload()
    free value
    return 0
}